# my_blog

./: .env_docker  .env_docker_exemple  .gitignore  Dockerfile  compose.yml  compose_dev.yml  docker-app.yml  docker-compose.yml  docker-nginx.yml  init-letsencrypt.sh  prod-compose.yml  start_service.sh
srv/: Dockerfile  pyproject.toml
srv/project/: Dockerfile  db.sqlite3  manage.py
srv/project/home/: block.py  models.py
srv/project/home/migrations/: 0003_blogpage.py  0004_alter_blogpage_body.py  0005_categorypage.py
srv/project/home/static/css/: article.css  prism_console.css
srv/project/home/static/js/: prism_console.js
srv/project/home/templates/page/: article.html  home.html  index.html
srv/project/home/templates/snippet/: header.html  index_article.html  paginator.html
srv/project/microservice/menus/: apps.py  blocks.py  models.py
srv/project/microservice/menus/migrations/: 0001_initial.py  0002_globalmenu_munus.py  0003_globalmenu_site_name_alter_globalmenu_munus.py  0004_globalmenu_footer.py  0005_alter_globalmenu_footer.py
srv/project/microservice/menus/templates/menu/: footer_page.html  footer_text.html  page.html  text.html
srv/project/project/: wsgi.py
srv/project/project/settings/: base.py  dev.py  local.py  production.py
srv/project/project/static/css/: tailwindcss.css
srv/project/project/templates/: 404.html  base.html  footer_link.html  header.html
srv/project/project/templates/block/: breadcrumb.jinja  media.html
srv/project/project/templates/snippet/: bc.html  pagginator.html
srv/project/utils/: models.py
(+35 files in other folders)
