[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["netromnik"]

[tool.poetry.dependencies]
python = "^3.10"
wagtail = "^3.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
whitenoise = "^6.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
